# CHUPS

./: .gitignore  .swp  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  SECURITY.md  cmake_install.cmake  purge.sh
.github/: dependabot.yml
.github/workflows/: c-cpp.yml  ossf_scorecard.yml  scorecard.yml
include/: common.h  file.h  host.h  icmp.h  logs.h  menu.h  synack.h  textcolor.h
src/: common.c  file.c  host.c  icmp.c  logs.c  main.c  menu.c  synack.c  textcolor.c
web/: index.js  package-lock.json  package.json
web/public/: style.css
web/views/: index.ejs  liveView.ejs
